--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,44 +15,40 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.5.1+1
+version: 1.4.8+14
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=3.1.0-325.0.dev <4.0.0'
 
 dependencies:
+  change_app_package_name: ^1.1.0
+  connectivity: ^3.0.6
+  cupertino_icons: ^1.0.6
+  dio: ^5.4.0
+  fcm_config: ^3.5.3
+  firebase_core: ^2.25.4
+  firebase_messaging: ^14.7.15
   flutter:
     sdk: flutter
+  flutter_chat_bubble: ^2.0.2
+  flutter_local_notifications: ^16.3.2
+  fluttertoast: ^8.2.4
+  get: ^4.6.6
+  get_storage: ^2.1.1
+  google_maps_flutter: ^2.5.3
+  image_gallery_saver: ^2.0.3
+  image_picker: ^1.0.7
+  intl: ^0.19.0
+  location: ^5.0.3
+  map_launcher: ^3.1.0
+  permission_handler: ^11.2.0
+  pin_code_fields: ^8.0.1
+  qrscan: ^0.3.3
+  rxdart: ^0.27.7
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  get:
-  rxdart: ^0.26.0
-  bottom_navy_bar: ^6.0.0
-  http: ^0.13.2
-  google_maps_flutter: ^2.0.3
-  qrscan: ^0.3.1
-  image_picker: ^0.8.4
-  image_gallery_saver: ^1.6.7
-  connectivity:
-  location:
-  permission_handler: ^7.0.0
-  firebase_core:
-  firebase_messaging:
-  firebase_analytics: ^8.0.2
-
-  get_storage:
-  dio: ^4.0.0
-  #location: ^3.2.1
-  flutter_chat_bubble: ^1.0.2
-  fluttertoast: ^8.0.8
-  flutter_local_notifications:
-  pin_code_fields: ^7.3.0
-  awesome_notifications: ^0.0.6+7
-  map_launcher: ^2.1.1
-  intl: ^0.17.0
 
 
 dev_dependencies:
