--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,17 +21,17 @@ environment:
   sdk: '>=3.1.0-325.0.dev <4.0.0'
 
 dependencies:
-  change_app_package_name: ^1.1.0
-  connectivity: ^3.0.6
-  cupertino_icons: ^1.0.6
-  dio: ^5.4.0
-  fcm_config: ^3.5.3
-  firebase_core: ^2.25.4
-  firebase_messaging: ^14.7.15
   flutter:
     sdk: flutter
+  change_app_package_name: ^1.1.0
+  connectivity_plus: ^6.1.3
+  cupertino_icons: ^1.0.6
+  dio: ^5.4.0
+  fcm_config: ^3.6.5
+  firebase_core: ^3.11.0
+  firebase_messaging: ^15.2.2
   flutter_chat_bubble: ^2.0.2
-  flutter_local_notifications: ^16.3.2
+  flutter_local_notifications: ^18.0.1
   fluttertoast: ^8.2.4
   get: ^4.6.6
   get_storage: ^2.1.1
